--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Image from "../components/Image.astro";
     <Image
       src="/src/images/elva-800w.jpg"
       alt="A father holiding his beloved daughter in his arms"
+      placeholder="none"
       artDirectives={[
         {
           media: "(max-width: 480px)",
