--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -31,7 +31,7 @@ const {
 const label = `Image at ${src} optimized in`;
 
 console.time(label);
-const { hash, images } = await getImage(
+const { uuid, images } = await getImage(
   src,
   format,
   breakpoints,
@@ -47,7 +47,7 @@ console.timeEnd(label);
 
 const { width } = images.at(-1).sizes;
 
-const className = `astro-image-${hash.toUpperCase()}`;
+const className = `astro-image-${uuid}`;
 
 const imagesrcset =
   preload &&
