--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Image from "../components/Image.astro";
   <body>
     <h1>Hello World!</h1>
     <Image
-      src="/src/images/elva-800w.jpeg"
+      src="/src/images/elva-800w.jpg"
       alt="A father holiding his beloved daughter in his arms"
       artDirectives={[
         {
